# weston-keybind

./: .gitignore  CMakeLists.txt  Makefile  README.md
.github/workflows/: ci.yml
include/: binder.h
src/: binder.c  parse.c  weston_compat.c
tests/: test_parse.c  weston_mocks.c
